--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,8 +25,29 @@ body {
     width: 100%;
 }
 
+.btn-geral {
+    font-size: 16px;
+    color: #fff;
+    display: table;
+    background: #fb3c3a;
+    padding: 10px 60px;
+    border-radius: 50px;
+    margin: 40px auto;
+}
+.btn-geral:hover {
+    color: #fff;
+    background: #191046;
+}
+iframe {
+    display: block;
+    max-width: 840px;
+    border: 20px solid #ededed;
+    margin: 0 auto;
+}
+
 header {
     position: absolute;
+    top: 0;
     z-index: 9;
     width: 100%;
 }
@@ -60,6 +81,9 @@ header {
     padding: 0 50px;
     width: 100%;
     height: 80px;
+    webkit-box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.3);
+    -moz-box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.3);
+    box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.3);
 }
 ul.nav,
 .navbar-default,
@@ -218,9 +242,6 @@ ul.nav>.redes-sociais a .fa {
     color: #fff;
 }
 .palestras iframe {
-    display: block;
-    max-width: 840px;
-    border: 20px solid #ededed;
     margin: 50px auto 0;
 }
 
@@ -434,6 +455,223 @@ footer img {
     width: 100%;
 }
 
+.titulo-interno {
+    margin-top: 180px;
+    margin-bottom: 50px;
+}
+.titulo-interno:before {
+    content: "";
+    width: 100%;
+    height: 90px;
+    background: #0b080f;
+    display: block;
+    position: absolute;
+    top: 0;
+}
+.titulo-interno h1 {
+    font-size: 30px;
+    font-weight: bold;
+    color: #1c0e45;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    margin: 0;
+}
+.titulo-interno h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #8198c9;
+    text-transform: uppercase;
+    margin: 30px 0 0;
+}
+.perfil2 .item2 {
+    text-align: center;
+    background: #8198c9!important;
+}
+.perfil2 .redes-sociais {
+    display: flex;
+    justify-content: center;
+}
+.perfil2 .redes-sociais a {
+    font-size: 30px;
+    color: #191046;
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    margin: 0 10px;
+}
+.perfil2 .redes-sociais a:hover {
+    background: #050212;
+}
+.perfil2 .redes-sociais a .fa {
+    color: #191046;
+}
+.sobre iframe {
+    margin-bottom: 60px;
+}
+
+.palestras-lista {
+    padding: 60px 0;
+    background: #ededed;
+}
+.palestras-lista:nth-child(2n) {
+    background: #dbdbdb;
+}
+.palestras-lista img {
+    margin-bottom: 20px;
+}
+.palestras-lista h4 {
+    font-size: 28px;
+    font-weight: bold;
+    color: #1c0e45;
+    text-transform: uppercase;
+    margin: 0;
+}
+.palestras-lista p {
+    font-size: 18px;
+    color: #0b080f;
+    margin-bottom: 20px;
+}
+.palestras-lista a {
+    margin: 20px 0 0;
+}
+
+.contrate label {
+    font-size: 12px;
+    color: #8198c9;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+    padding-left: 20px;
+}
+.contrate input {
+    height: 40px;
+    border-radius: 50px;
+}
+.contrate textarea {
+    border-radius: 50px;
+}
+.contrate button {
+    font-size: 14px;
+    font-weight: bold;
+    color: #191046;
+    text-transform: uppercase;
+    display: table;
+    background: #84cf3c;
+    float: right;
+    padding: 10px 60px;
+    border: none;
+    border-radius: 50px;
+    margin-top: 10px;
+}
+.contrate button:hover {
+    background: #8198c9;
+}
+
+.listagem {
+    margin-bottom: 60px;
+}
+.listagem .item {
+    border-bottom: 3px solid #dbdbdb;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
+.listagem img {
+    width: 100%;
+    height: 210px;
+    object-fit: cover;
+}
+.listagem h2 {
+    font-size: 28px;
+    font-weight: bold;
+    color: #191046;
+    text-transform: uppercase;
+    margin: 10px 0 20px;
+}
+.listagem span {
+    font-size: 14px;
+    color: #8198c9;
+    margin: 0;
+}
+.listagem a.btn-geral {
+    padding: 10px 30px;
+    margin: 0;
+}
+
+aside .banner {
+    margin-bottom: 50px;
+}
+.perfil-sid {
+    border-bottom: 2px solid #dbdbdb;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+}
+.perfil-sid img {
+    margin-bottom: 20px;
+}
+.perfil-sid h4 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #8198c9;
+    text-transform: uppercase;
+    margin: 0 0 15px;
+}
+.perfil-sid h4:after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background: #9e9e9e;
+    display: block;
+    margin-top: 5px;
+}
+.perfil-sid p {
+    font-size: 18px;
+    color: #0b080f;
+    text-align: justify;
+    margin: 0;
+}
+.palestras.perfil-sid,
+.palestras.perfil-sid .owl-carousel {
+    padding: 0;
+}
+.palestras.perfil-sid img {
+    margin: 0;
+}
+.palestras.perfil-sid p {
+    font-size: 15px;
+    color: #fff;
+}
+
+.blog-interna {
+    padding: 60px 0;
+    background: #ededed;
+}
+.blog-interna img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+.blog-interna h2 {
+    font-size: 40px;
+    font-weight: bold;
+    color: #191046;
+    text-transform: uppercase;
+    margin: 10px 0 30px;
+}
+.blog-interna p {
+    font-size: 18px;
+    color: #0b080f;
+    text-align: justify;
+    margin-bottom: 20px;
+}
+.blog-interna span {
+    font-size: 14px;
+    color: #8198c9;
+    margin: 0;
+}
+
 /* --- MOBILE --- */
 @media (max-width: 767px) {
     .topo,
@@ -524,7 +762,7 @@ footer img {
     .owl-nav {
         display: none;
     }
-    .palestras iframe {
+    iframe {
         border: 10px solid #ededed;
         margin: 20px auto 0;
         height: 250px;
@@ -586,6 +824,38 @@ footer img {
     footer img {
         height: 150px;
         object-fit: cover;
+    }
+    .titulo-interno {
+        margin-top: 70px;
+        margin-bottom: 30px;
+    }
+    .titulo-interno:before {
+        height: 24px;
+    }
+    .titulo-interno h1 {
+        font-size: 20px;
+        letter-spacing: 4px;
+        margin: 0 0 20px;
+    }
+    .titulo-interno h2 {
+        font-size: 16px;
+        margin: 0 0 0;
+    }
+    .btn-geral {
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 20px!important;
+    }
+    .palestras-lista h4 {
+        font-size: 20px;
+    }
+    .palestras-lista p {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+    .listagem img {
+        margin-bottom: 10px;
     }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
